chore: 添加 Playwright 测试工具和 Vue DevTools 配置
- 添加 @playwright/test 1.58.2 依赖用于前端测试
- 在 index.html 中添加 Vue DevTools 脚本标签以支持开发调试
- 更新 pnpm-lock.yaml 锁定依赖版本

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@playwright/test": "^1.58.2",
     "@supabase/supabase-js": "^2.95.3",
     "dayjs": "^1.11.19",
     "katex": "^0.16.28",
